2011-03-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add layoutTestController.setValueForUser() after r80412
        https://bugs.webkit.org/show_bug.cgi?id=55862

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setValueForUser): Implement setValueForUser()

2011-03-08  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Add script_shell_command to WebKitPort
        https://bugs.webkit.org/show_bug.cgi?id=55925

        Add a central place where we generate the shell command from the script name.
        This function will be used later to detect the correct script interpreter on Win32.

        * Scripts/webkitpy/common/config/ports.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/tool/steps/abstractstep.py:
        * Scripts/webkitpy/tool/steps/preparechangelog.py:

2011-03-07  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        add webkit-patch attach-to-bug for posting to bugzilla from the commandline
        https://bugs.webkit.org/show_bug.cgi?id=55749

        * Scripts/webkitpy/tool/commands/upload.py:
        * Scripts/webkitpy/tool/commands/upload_unittest.py:
        * Scripts/webkitpy/tool/steps/__init__.py:
        * Scripts/webkitpy/tool/steps/attachtobug.py: Added.
        * Scripts/webkitpy/tool/steps/options.py:

2011-03-07  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by David Levin.

        Add support for DataTransferItems
        https://bugs.webkit.org/show_bug.cgi?id=55115

        Enable data transfer items in DRT.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):

2011-03-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        [test dashboard] pull treemap files
        https://bugs.webkit.org/show_bug.cgi?id=55852

        * TestResultServer/handlers/dashboardhandler.py:
